[project]
name = "dbus-experiment"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "dbus-python (>=1.3.2,<2.0.0)",
    "pygobject (>=3.50.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "dbus_experiment", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
